--- a/Doku/Bericht/2-theory/drawing-graphics/graphic.tex
+++ b/Doku/Bericht/2-theory/drawing-graphics/graphic.tex
@@ -1,10 +1,9 @@
 
-If an matrix style display is used with a microcontroller, there are a lot of different ways to draw graphical elements. This chapter \ref{chapter:DrawGraph} covers only the ways used in this project. 
+If an matrix style display is used with a microcontroller, there are a lot of different ways to draw graphical elements. This section covers only the ways used in this project. 
 
 \subsubsection{Matrix displays}
 
-Since most displays produced have an rectangular shape the amount of pixel they hold is calculated like the surface of an rectangular. The number of pixels on both axis are multiplied and we get the total amount of pixels we have to manipulate. So it is obvious that the memory size of an picture explodes with its resolution. As an example we take a display with a pixel ratio of 1200 x 825 and a colour depth of 24 bit. We get $1200\cdot825=990'000$ pixel and $1200\cdot825\cdot24=23'760'000$ bits we have to handle. This is a huge amount of data to process with a microcontroller. \textbf{etwas über industrie schreiben wiso wir diplay treiber bausteine haben und nicht alles paralell machen}\\
-
+Since most displays produced have an rectangular shape the amount of pixel they hold is calculated like the surface of an rectangular. The number of pixels on both axis are multiplied and we get the total amount of pixels we have to manipulate. So it is obvious that the memory size of an picture explodes with its resolution. As an example we take a display with a pixel ratio of $1200 \times 825$ and a colour depth of 24 bit. We get $1200\cdot825=990'000$ pixel and $1200\cdot825\cdot24=23'760'000$ bits we have to handle. This is a huge amount of data to process with a microcontroller. \textbf{etwas über industrie schreiben wiso wir diplay treiber bausteine haben und nicht alles paralell machen}\\
 
 If an display is rectangular the information of the pixels can be ordered in a matrix. The matrix is normally one or two dimensions to access the data. This matrix can be implemented as an array with one or two dimensions. The definition used for the array management and memory handling is given by the ISO C-Language standard. It specifies with the following sentences how the arrays are defined in the C-Language. 
 
@@ -24,15 +23,15 @@ Alignment is defined with the sentence:
 	"\textbf{Alignment} requirement that objects of a particular type be located on storage boundaries with addresses that are particular multiples of a byte address."
 \end{displayquote}\cite{ISO/IEC9899}
 
- and shows the strict handling of the memory mapping in the C-Language. Since the alignment needs to be given for arrays the amount of dimensions of the array have no influence how the information is stored in the memory. In the figure \ref{theory:matrix} the one dimensional matrix style is shown. To access this kind of display the address of the $176$-pixels reaches from $0$ to $175$ this is display can be addressed with 
+ and shows the strict handling of the memory mapping in the C-Language. Since the alignment needs to be given for arrays the amount of dimensions of the array have no influence how the information is stored in the memory. In the Figure \ref{theory:matrix} the one dimensional matrix style is shown. To access this kind of display the address of the $176$-pixels reaches from $0$ to $175$ this is display can be addressed with 
  
- $$ \lfloor \log_{2}(176) \rfloor = 8$$
+ $$n = \lfloor \log_{2}(176) \rfloor = 8$$
  bit.   
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{2-theory/drawing-graphics/graphics/matrix.pdf}
-	\caption{16x11 pixel display with a flat matrix \label{theory:matrix}}
+	\caption{$16\times 11$ pixel display with a flat matrix \label{theory:matrix}}
 \end{figure}
 
 The 
@@ -40,7 +39,7 @@ The
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{2-theory/drawing-graphics/graphics/matrix2.pdf}
-	\caption{16x11 display with a two dimensional matrix\label{theory:matrix2}}
+	\caption{$16\times 11$ display with a two dimensional matrix\label{theory:matrix2}}
 \end{figure}
 
 \subsubsection{Double buffering}
