--- a/Doku/Bericht/4-development/hardware/hardware.tex
+++ b/Doku/Bericht/4-development/hardware/hardware.tex
@@ -50,7 +50,7 @@ Purpose of the first test was to measure the achievable range.
 Figure \ref{development:env1} shows the hallway where this test was executed.
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/env1.jpg}
+	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/env/env1_c.pdf}
 	\caption{Test environment 1 (\acs{hsr} building 1).\label{development:env1}}
 \end{figure}
 With a transmission power of 0\,dBm (1\,mW) it is possible to receive interrupt over a 50\,m distance (line of sight).
@@ -63,7 +63,7 @@ As test environment served this time the \acs{hsr} builing 8, as depicted in Fig
 An attempt was made to send wakeup signals through the ceiling.
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/env2.jpg}
+	\includegraphics[width=0.9\textwidth]{4-development/hardware/graphics/env/env2_c.pdf}
 	\caption{Test environment 2 (\acs{hsr} building 8).\label{development:env2}}
 \end{figure}
 To avoid reflections, the RFicient was placed in such a way, that the zero point of the antenna pointed directly at the opposite walls.
