Power Latch Schema

--- a/Doku/Bericht/2-theory/drawing-graphics/graphics/font12.tex
+++ b/Doku/Bericht/2-theory/drawing-graphics/graphics/font12.tex
@@ -20,33 +20,33 @@ decoration={brace,amplitude=2pt}]
 (1.75,4.28) -- (1.75,7.88) node [black,midway,xshift=0.5cm] {\footnotesize
 	$12$};
 \node[anchor=center] at (3, 8) {\footnotesize Hex Values};
-\node[anchor=center] at (3, 7.7) {\footnotesize 0x00};
-\node[anchor=center] at (3, 7.4) {\footnotesize 0x30};
-\node[anchor=center] at (3, 7.1) {\footnotesize 0x10};
-\node[anchor=center] at (3, 6.8) {\footnotesize 0x28};
-\node[anchor=center] at (3, 6.5) {\footnotesize 0x28};
-\node[anchor=center] at (3, 6.2) {\footnotesize 0x28};
-\node[anchor=center] at (3, 5.9) {\footnotesize 0x7C};
-\node[anchor=center] at (3, 5.6) {\footnotesize 0x44};
-\node[anchor=center] at (3, 5.3) {\footnotesize 0xEE};
-\node[anchor=center] at (3, 5 ) {\footnotesize  0x00};
-\node[anchor=center] at (3, 4.7) {\footnotesize 0x00};
-\node[anchor=center] at (3, 4.4) {\footnotesize 0x00};
+\node[anchor=center] at (3, 7.7) {\footnotesize \texttt{0x00}};
+\node[anchor=center] at (3, 7.4) {\footnotesize \texttt{0x30}};
+\node[anchor=center] at (3, 7.1) {\footnotesize \texttt{0x10}};
+\node[anchor=center] at (3, 6.8) {\footnotesize \texttt{0x28}};
+\node[anchor=center] at (3, 6.5) {\footnotesize \texttt{0x28}};
+\node[anchor=center] at (3, 6.2) {\footnotesize \texttt{0x28}};
+\node[anchor=center] at (3, 5.9) {\footnotesize \texttt{0x7C}};
+\node[anchor=center] at (3, 5.6) {\footnotesize \texttt{0x44}};
+\node[anchor=center] at (3, 5.3) {\footnotesize \texttt{0xEE}};
+\node[anchor=center] at (3, 5 ) {\footnotesize  \texttt{0x00}};
+\node[anchor=center] at (3, 4.7) {\footnotesize \texttt{0x00}};
+\node[anchor=center] at (3, 4.4) {\footnotesize \texttt{0x00}};
 
 
 \node[anchor=center] at (5, 8) {\footnotesize Binary Values};
-\node[anchor=center] at (5, 7.7) {\footnotesize 0000 0000};
-\node[anchor=center] at (5, 7.4) {\footnotesize 0011 0000};
-\node[anchor=center] at (5, 7.1) {\footnotesize 0001 0000};
-\node[anchor=center] at (5, 6.8) {\footnotesize 0010 1000};
-\node[anchor=center] at (5, 6.5) {\footnotesize 0010 1000};
-\node[anchor=center] at (5, 6.2) {\footnotesize 0010 1000};
-\node[anchor=center] at (5, 5.9) {\footnotesize 0111 1100};
-\node[anchor=center] at (5, 5.6) {\footnotesize 0100 0100};
-\node[anchor=center] at (5, 5.3) {\footnotesize 1110 1110};
-\node[anchor=center] at (5, 5 ) {\footnotesize  0000 0000};
-\node[anchor=center] at (5, 4.7) {\footnotesize 0000 0000};
-\node[anchor=center] at (5, 4.4) {\footnotesize 0000 0000};
+\node[anchor=center] at (5, 7.7) {\footnotesize \texttt{0000 0000}};
+\node[anchor=center] at (5, 7.4) {\footnotesize \texttt{0011 0000}};
+\node[anchor=center] at (5, 7.1) {\footnotesize \texttt{0001 0000}};
+\node[anchor=center] at (5, 6.8) {\footnotesize \texttt{0010 1000}};
+\node[anchor=center] at (5, 6.5) {\footnotesize \texttt{0010 1000}};
+\node[anchor=center] at (5, 6.2) {\footnotesize \texttt{0010 1000}};
+\node[anchor=center] at (5, 5.9) {\footnotesize \texttt{0111 1100}};
+\node[anchor=center] at (5, 5.6) {\footnotesize \texttt{0100 0100}};
+\node[anchor=center] at (5, 5.3) {\footnotesize \texttt{1110 1110}};
+\node[anchor=center] at (5, 5 ) {\footnotesize  \texttt{0000 0000}};
+\node[anchor=center] at (5, 4.7) {\footnotesize \texttt{0000 0000}};
+\node[anchor=center] at (5, 4.4) {\footnotesize \texttt{0000 0000}};
 
 
 \draw[thick, ->](-1.5,6.08)->(-1.1,6.08);
