--- a/Doku/Bericht/5-results/5-results.tex
+++ b/Doku/Bericht/5-results/5-results.tex
@@ -1,4 +1,7 @@
 \chapter{Results}
 
+\section{Functionality}
+\input{5-results/functionality/functionality.tex}
+
 \section{Power consumption}
 \input{5-results/energy/energy.tex}
