--- a/Doku/Bericht/main.tex
+++ b/Doku/Bericht/main.tex
@@ -10,6 +10,7 @@
 %\usepackage{german}
 \usepackage{times}
 \usepackage{csquotes}
+\usepackage{subfigure}
 \usepackage{geometry}
 \usepackage{csquotes}
 \geometry{papersize={210mm,297mm},total={160mm,240mm},top=31mm,bindingoffset=15mm}
