--- a/Doku/Bericht/2-theory/drawing-graphics/graphic.tex
+++ b/Doku/Bericht/2-theory/drawing-graphics/graphic.tex
@@ -44,7 +44,7 @@ The
 
 \subsubsection{Double buffering}
 
-
+To eliminate the 
   
 
 \begin{figure}[H]
@@ -69,27 +69,18 @@ The theory shown in this chapter \ref{chapter:CompressedFonts} is only valid if 
 
 \subsection{Drawing text to the display}
 
-\begin{figure}[H]
+If a displays have an colour depth of eight bit per pixel the host controller needs to write for each pixel an eight bit value to the memory of the pixel. 
+
+\begin{figure}[!ht]
 	\centering
-	\includegraphics[width=0.6\textwidth]{2-theory/drawing-graphics/graphics/drawingfont.pdf}
-	\caption{Double buffer example while writing different images to screen\label{theory:font1bit}}
-\end{figure}
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.6\textwidth]{2-theory/drawing-graphics/graphics/drawingfont8blue.pdf}
-	\caption{Double buffer example while writing different images to screen\label{theory:fontgreen}}
-\end{figure}
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.6\textwidth]{2-theory/drawing-graphics/graphics/drawingfont8green.pdf}
-	\caption{Double buffer example while writing different images to screen\label{theory:fontblue}}
+	\subfigure[Font mask displayed in one bit color depth\label{fig:1bitcolor}]{\includegraphics[width=0.49\linewidth]{2-theory/drawing-graphics/graphics/drawingfont.pdf}}
+	\subfigure[Font mask displayed in eight bit color depth with the value for blue \label{fig:Colorblue}]{\includegraphics[width=0.49\linewidth]{2-theory/drawing-graphics/graphics/drawingfont8blue.pdf}}
+	\subfigure[Font mask displayed in eight bit color depth with the value for green \label{fig:Colorgreen}]{\includegraphics[width=0.49\linewidth]{2-theory/drawing-graphics/graphics/drawingfont8green.pdf}}
+	\subfigure[Font mask displayed in eight bit color depth with the value for red \label{fig:Colorred}]{\includegraphics[width=0.49\linewidth]{2-theory/drawing-graphics/graphics/drawingfont8red.pdf}}
+	\caption{$12 \times 7$ pixel font mask displayed with $1$- and $8$bit colour depth}
+	\label{fig:ganzes_fig}
 \end{figure}
 
-\begin{figure}[H]
-	\centering
-	\includegraphics[width=0.6\textwidth]{2-theory/drawing-graphics/graphics/drawingfont8red.pdf}
-	\caption{Double buffer example while writing different images to screen\label{theory:fontgreen}}
-\end{figure}
-
+Fig.\,\ref{fig:ganzes_fig}, Fig.\,\ref{fig:a}, Fig.\,\ref{fig:b}, Fig.\,\ref{fig:c}, Fig.\,\ref{fig:d}
 
 
