--- a/Doku/Bericht/2-theory/drawing-graphics/graphics/drawingfont.tex
+++ b/Doku/Bericht/2-theory/drawing-graphics/graphics/drawingfont.tex
@@ -6,7 +6,7 @@
 	
 	
 	\begin{tikzpicture}[scale=.5,every node/.style={minimum size=1cm},on grid]
-	\draw[very thick] (-14,-10) rectangle (14,5);
+	%\draw[very thick] (-14,-10) rectangle (14,5);
 	
 	%slanting: production of a set of n 'laminae' to be piled up. N=number of grids.
 	\begin{scope}[
@@ -88,10 +88,10 @@
 	\end{scope}	
 	
 	%putting arrows and labels:
-	\draw[-latex,thick] (7,0) node[right]{$\mathsf{Compressed font}$}
+	\draw[-latex,thick] (7,0) node[right]{\Large Compressed font}
 	to[out=180,in=90] (6,-3.5);
 	
-	\draw[<->,>=stealth](7.1,-3.6)--(7.1,-4.5) node[midway,right] {1bit color depth};
+	\draw[<->,>=stealth, very thick](7.1,-3.6)--(7.1,-4.5) node[midway,right] {\Large 1bit color depth};
 	
 	%\draw[-latex-,thick] (-3+14,2.5-9)to(-1.2+14,1-9);
 	
