Pwr Latch graphic

--- a/Doku/Bericht/4-development/hardware/hardware.tex
+++ b/Doku/Bericht/4-development/hardware/hardware.tex
@@ -198,7 +198,22 @@ It can also clearly be seen, that after 160 seconds, the ADP5090 controls $V_{\t
 
 \subsubsection{Power Latch}
 
-To be able to 
+To enable and disable the power supply of everything but the ADP5090 and Wakeup receiver  
+
+\begin{figure}[!ht]
+	\centering
+	\subfigure[3D picture of Version one of the power latch \label{fig:1bitcolor}]{\includegraphics[width=0.49\linewidth]{4-development/hardware/graphics/PowerLatch/PwrLatch_V1_3d.PNG}}
+	\subfigure[3D picture of Version two of the power latch \label{fig:Colorblue}]{\includegraphics[width=0.49\linewidth]{4-development/hardware/graphics/PowerLatch/PwrLatch_V2_3d.PNG}}\\
+	
+	\subfigure[Font mask displayed in eight bit color depth with the value for green \label{fig:Colorgreen}]{\includegraphics[width=0.49\linewidth,page=1]{4-development/hardware/graphics/PowerLatch/PwrLatch_V1_Layer.pdf}}
+	\subfigure[Font mask displayed in eight bit color depth with the value for red \label{fig:Colorred}]{\includegraphics[width=0.49\linewidth,page=1]{4-development/hardware/graphics/PowerLatch/PwrLatch_V2_Layer.pdf}}
+	\subfigure[Font mask displayed in eight bit color depth with the value for green \label{fig:Colorgreen}]{\includegraphics[width=0.49\linewidth,page=2]{4-development/hardware/graphics/PowerLatch/PwrLatch_V1_Layer.pdf}}
+	\subfigure[Font mask displayed in eight bit color depth with the value for red \label{fig:Colorred}]{\includegraphics[width=0.49\linewidth,page=2]{4-development/hardware/graphics/PowerLatch/PwrLatch_V2_Layer.pdf}}
+	\caption{$12 \times 7$ pixel font mask displayed with $1$- and $8$bit colour depth}
+	\label{fig:ganzes_fig}
+\end{figure}
+
+Fig.\,\ref{fig:ganzes_fig}, Fig.\,\ref{fig:a}, Fig.\,\ref{fig:b}, Fig.\,\ref{fig:c}, Fig.\,\ref{fig:d}
 
 \subsection{Display}
 
