--- a/Doku/Bericht/0-abstract/0-abstract.tex
+++ b/Doku/Bericht/0-abstract/0-abstract.tex
@@ -1,10 +1,10 @@
 \chapter*{Abstract}
 
 \section*{Introduction}
-In company buildings, universities and other similar facilities, it is usual to attach occupancy schedules next to a room entrance. These schedules are most of the time printed on paper, or in more modern buildings, displayed on a screen. Using paper, it is impracticable to take short-term changes into account, since every adjustment needs to be made by printing a new schedule. Hence, screens need to be connected to the power grid, which entails extensive installation work, or powered by a battery, which needs to be replaced from time to time. All these disadvantages could be avoided by using a screen which harvests its energy from the indoor lightning, and is updated via a wireless interface.
+Today, companies, universities and similar facilities, are using a simple sign next to the entrance of a room to display its occupancy schedule. In more modern buildings, the schedule is presented on a screen; however, most of the buildings still use schedules printed on paper. This approach creates the infeasibility to take spontaneous changes into account, as every minor modifications leads to a newly printed schedule. Additionally, buildings that already use displays have the obstacle of the initial installation of the device, which entails extensive installation work by connecting it to the power grid. One solution could be to replace the power grid by batteries, which would lead to additional costs of the batteries (due to frequent replacement) plus the human labour costs (as employers have to change the batteries). The disadvantages outlined above could be avoided by using a screen (following named “E-Paper Display” or EPD) that harvests its energy from indoor lightening. Additional to this self-sufficient method, the screen would also up-date via a wireless interface, providing the opportunity to take short-term changes into consideration and display a timely room schedule. 
 
 \section*{Approach}
-To power the system, solar cells are used to harvest energy, which is stored in a super-capacitor to ensure small power leakage. Because this kind of harvesting unit cannot provide vast amounts of energy over a long period of time, the whole system can only fully run in short bursts. To save energy, an e-paper display is used, which only needs energy to update the screen, but not for maintaining the displayed image. Furthermore a constantly listening wakeup receiver is used. When receiving a specific wakeup sequence, it will generate an interrupt to enable the power supply of the remaining system. The remaining part then receives data via Bluetooth, displays the data and in the end cuts its own power supply, to enter a new cycle of low-power listening mode. 
+The system is powered by a energy storage system that uses solar cells to harvest energy. This energy will then be stored in a super-capacitor to ensure minimal power leakage. As this specific type of energy harvesting unit cannot provide vast amounts of energy over a longer time period, the whole system fully runs in short bursts. One solution introduced to save energy is by using an E-Paper Display (EPD). The EPD only uses energy when updating its screen but not for maintaining, the image displayed on the screen, which results in a high energy reduction.   Furthermore, in addition to the EPD a constantly listening ultra-low power wakeup receiver is used. This will further enhance the system, as it will generate an interruption to enable the power supply of the remaining system only when receiving a specific wakeup sequence. The remaining part then receives data via Bluetooth, which will then display the data and eventually cuts its own power supply to enter a new cycle of low-power listening mode.
 
 \section*{Conclusion}
-Energy harvesting provides enough energy, if updating the schedule does not occur too frequently. This semester thesis shows, that a wakeup receiver is suitable for this kind of problem. With the implementation of a self-holding circuit, it is even possible to switch off the whole system (except for the wakeup receiver) when unused. The wakeup receiver consumes a maximum of $4.5\,\mu \text{W}$ during listening mode while the system harvests around $485,52\,\mu\text{W}$.  
+This semester thesis was designed to elaborate a sustainable screen in order to display a room’s occupancy next to its entrance. Upon analysis of potential solutions, it can be concluded that the outlined energy harvesting does provide enough energy to sustainable run the introduced E-Paper Display (EPD), if up-dating the schedule does not occur too frequently. Moreover, it has been identified that a wakeup receiver is the most suitable tool to support the display. The implementation of a latch circuit makes it possible to switch off the whole system (except for the wakeup receiver) when not in usage. In total the wakeup receiver consumes a maximum of $4.5\,\mu \text{W}$ during listening mode while the system harvests around $485,52\,\mu\text{W}$. 
