--- a/Doku/Bericht/2-theory/drawing-graphics/graphics/drawingfont8red.tex
+++ b/Doku/Bericht/2-theory/drawing-graphics/graphics/drawingfont8red.tex
@@ -5,7 +5,7 @@
 	\pagestyle{empty}
 	
 	\def\col{red}
-	\begin{tikzpicture}[scale=.5,every node/.style={minimum size=1cm},on grid]
+	\begin{tikzpicture}[scale=.5,every node/.style={minimum size=1cm},on grid]\sffamily
 	%\draw[very thick] (-14,-10) rectangle (14,10);
 	
 	%slanting: production of a set of n 'laminae' to be piled up. N=number of grids.
