--- a/Doku/Bericht/4-development/hardware/hardware.tex
+++ b/Doku/Bericht/4-development/hardware/hardware.tex
@@ -197,23 +197,21 @@ The output now stays switched off, until $V_{\text{IN}}$ again supplies energy, 
 It can also clearly be seen, that after 160 seconds, the ADP5090 controls $V_{\text{IN}}$ to ca. $2.1\,\text{V}$. Recall that this is the optimal power point of the solar cell.
 
 \subsubsection{Power Latch}
-
-To enable and disable the power supply of everything but the ADP5090 and Wakeup receiver  
+Considered 
+To enable and disable the power supply of everything but the ADP5090 and Wakeup receiver, the usage of a latch circuit was the most suited option.  
 
 \begin{figure}[!ht]
 	\centering
-	\subfigure[3D picture of Version one of the power latch \label{fig:1bitcolor}]{\includegraphics[width=0.49\linewidth]{4-development/hardware/graphics/PowerLatch/PwrLatch_V1_3d.PNG}}
-	\subfigure[3D picture of Version two of the power latch \label{fig:Colorblue}]{\includegraphics[width=0.49\linewidth]{4-development/hardware/graphics/PowerLatch/PwrLatch_V2_3d.PNG}}\\
+	\subfigure[3D picture of version one of the power latch \label{fig:pwr3dV1}]{\includegraphics[width=0.49\linewidth]{4-development/hardware/graphics/PowerLatch/PwrLatch_V1_3d.PNG}}
+	\subfigure[3D picture of version two of the power latch \label{fig:pwr3dV2}]{\includegraphics[width=0.49\linewidth]{4-development/hardware/graphics/PowerLatch/PwrLatch_V2_3d.PNG}}\\
 	
-	\subfigure[Font mask displayed in eight bit color depth with the value for green \label{fig:Colorgreen}]{\includegraphics[width=0.49\linewidth,page=1]{4-development/hardware/graphics/PowerLatch/PwrLatch_V1_Layer.pdf}}
-	\subfigure[Font mask displayed in eight bit color depth with the value for red \label{fig:Colorred}]{\includegraphics[width=0.49\linewidth,page=1]{4-development/hardware/graphics/PowerLatch/PwrLatch_V2_Layer.pdf}}
-	\subfigure[Font mask displayed in eight bit color depth with the value for green \label{fig:Colorgreen}]{\includegraphics[width=0.49\linewidth,page=2]{4-development/hardware/graphics/PowerLatch/PwrLatch_V1_Layer.pdf}}
-	\subfigure[Font mask displayed in eight bit color depth with the value for red \label{fig:Colorred}]{\includegraphics[width=0.49\linewidth,page=2]{4-development/hardware/graphics/PowerLatch/PwrLatch_V2_Layer.pdf}}
-	\caption{$12 \times 7$ pixel font mask displayed with $1$- and $8$bit colour depth}
-	\label{fig:ganzes_fig}
+	\subfigure[Top layer of the version one powerlatch \label{fig:pwrtopV1}]{\includegraphics[width=0.49\linewidth,page=1]{4-development/hardware/graphics/PowerLatch/PwrLatch_V1_Layer.pdf}}
+	\subfigure[Top layer of the version two powerlatch \label{fig:pwrtopV2}]{\includegraphics[width=0.49\linewidth,page=1]{4-development/hardware/graphics/PowerLatch/PwrLatch_V2_Layer.pdf}}
+	\subfigure[Bottom layer of the version one powerlatch \label{fig:bottomV1}]{\includegraphics[width=0.49\linewidth,page=2]{4-development/hardware/graphics/PowerLatch/PwrLatch_V1_Layer.pdf}}
+	\subfigure[Bottom layer of the version two powerlatch \label{fig:bottomV2}]{\includegraphics[width=0.49\linewidth,page=2]{4-development/hardware/graphics/PowerLatch/PwrLatch_V2_Layer.pdf}}
+	\caption{Comparison between the first and second version of the power latch to show their difference of the layout and components}
+	\label{fig:pwr_layout}
 \end{figure}
-
-Fig.\,\ref{fig:ganzes_fig}, Fig.\,\ref{fig:a}, Fig.\,\ref{fig:b}, Fig.\,\ref{fig:c}, Fig.\,\ref{fig:d}
 
 \subsection{Display}
 
