--- a/Doku/Bericht/4-development/software/software.tex
+++ b/Doku/Bericht/4-development/software/software.tex
@@ -1,6 +1,6 @@
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=0.9\textwidth]{4-development/software/graphics/1.png}
+	\includegraphics[width=0.9\textwidth]{4-development/software/graphics/sequence.pdf}
 	\caption{not up to date sequence\label{software:sequence}}
 \end{figure}
 
