--- a/Doku/Bericht/5-results/5-results.tex
+++ b/Doku/Bericht/5-results/5-results.tex
@@ -5,3 +5,6 @@
 
 \section{Power consumption}
 \input{5-results/energy/energy.tex}
+
+\section{Communication}
+\input{5-results/communication/communication.tex}
