--- a/Doku/Bericht/6-summary/conclusion.tex
+++ b/Doku/Bericht/6-summary/conclusion.tex
@@ -1,6 +1,8 @@
 Over the course of this thesis, a working prototype of an occupancy schedule was developed.
 As components served several development kits and simple prints.
-Using a low power wakeup receiver turned out to be the right approach, since the power consumption during standby mode could that way be reduced to a minimum of $4.5\,\mu\text{W}$.
-This power loss is easily compensated by the solar cells which deliver $485.52\,\mu\text{W}$ given an illuminance of 200\,lux.
-
 With a self-holding circuit, it was possible to turn off parts of the receiver completely and switch them back on with the a wakeup interrupt.
+This central part makes it possible to use more power consuming hardware, since it only is connected to the power supply for intervals of 5-6 seconds.
+Using a low power wakeup receiver turned out to be the right approach, since the power consumption during standby mode could be reduced to a minimum of $4.5\,\mu\text{W}$ that way.
+This power loss is easily compensated by the solar cells which deliver $485.52\,\mu\text{W}$ given an illuminance of 200\,lux.
+If no light reaches the solar cells and no wakesups occur, it is assumed that the prototype stays functional for over one year, under the condition that the super capacitor was charged fully beforehand.
+
